# spokes

./: .gitignore  Makefile.am  README.md  build.local  configure.ac  group-c.md  table-ab.py  table-c.py  table.py  tables.local
src/: Makefile.am  lib.c  lib.h  plot.c  search.c  stress.c  wheel.c  wheel.h
tests/: Makefile.am
